--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -40,7 +40,7 @@ header {
 
 header h1 {
     display: inline-block;
-    font-size: 48px;
+    font-size: 60px;
 }
 
 /* This is client-specific to make the "seo" part a different color */
@@ -66,8 +66,7 @@ nav ul li {
     margin-left: 25px;
 }
 
-
-
+/* Jumbotron image under header of people around table */
 .hero {
     height: 800px;
     width: 100%;
@@ -77,12 +76,37 @@ nav ul li {
     background-position: center;
 }
 
-.content {
+/* Nav Menu Content Styles */
+.nav-menu-content {
     margin-left: 25px;
     width: 75%;
     display:inline-block;
     }
 
+.nav-menu-item {
+    margin-bottom: 25px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.nav-menu-item p{
+    margin-right: 50px;
+    margin-bottom: 25px;
+}
+.nav-menu-item img {
+    max-height: 215px;
+}
+
+.nav-menu-item h2 {
+    margin-bottom: 20px;
+    margin-right: 60px;
+    font-size: 48px;
+}
+
+/* Article Benefits Styles */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -94,70 +118,21 @@ nav ul li {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
+.benefit-item {
+    margin-bottom: 30px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
+.benefit-item h3 {
+    margin-bottom: 16px;
     text-align: center;
+    font-size: 24px;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-item img {
     display: block;
-    margin: 10px auto;
+    margin: 15px auto;
     max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.nav-menu-item {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.nav-menu-item img {
-    max-height: 200px;
-}
-
-.nav-menu-item h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 /* Footer Tag Styles
@@ -169,7 +144,7 @@ footer {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    visibility: hidden;
+    visibility: hidden; /* HIDDEN per spec */
 }
 
 footer h4 {
