--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,11 +67,11 @@ nav ul li {
 }
 
 /* Jumbotron image under header of people around table */
-.hero {
+#meeting-background-image {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    /*background-image: url("../images/digital-marketing-meeting.jpg");*/
     background-size: cover;
     background-position: center;
 }
