Added descriptive comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ nav ul li {
     margin-left: 25px;
 }
 
-/* Jumbotron image under header of people around table */
+/* Jumbotron/Hero image under header of people around table */
 #meeting-background-image {
     height: 800px;
     width: 100%;
